--- a/src/assets/styles/eds-card.scss
+++ b/src/assets/styles/eds-card.scss
@@ -40,8 +40,8 @@ eds-card {
 		}
 	}
 	header {
-		margin: -20px -20px 20px;
-		padding: 12px 20px;
+		//margin: -20px -20px 20px;
+		padding: 12px 0px;
 		border-bottom: 1px solid #d8d8d8;
 		>h1 {
 			margin: 0;
